--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="cf-error-footer cf-wrapper w-240 lg:w-full py-10 sm:py-4 sm:px-8 mx-auto text-center sm:text-left border-solid border-0 border-t border-gray-300">
   <p class="text-13">
    </span>
-<img src="src/01.png">
+<img src="01.png">
     <a href="https://beian.miit.gov.cn/", target="_blank">备案/许可证编号为：黔ICP备2022007569号</a>
   </p>
 </div><!-- /.error-footer -->
