--- a/index.html
+++ b/index.html
@@ -76,5 +76,10 @@
   
 </script>
 
+<div style="width:300px;margin:0 auto; padding:20px 0;">
+<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=52060202000514" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="01.png" style="float:left;"/><p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#939393;">贵公网安备 52060202000514号</p></a>
+</div>
+		 
+
 </body>
 </html>
